--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,44 @@
+/* Import fonts */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Mono&display=swap');
+
+/* Set variables */
 :root {
-	--home-background: #4a536b;
+	/* text colors */
 	--red-text: #ff9a8d;
 	--white-text: #ffffff;
 	--gray-text: #d5d5d5;
 	--dark-gray-text: #9b9b9b;
+
+	/* icons colors */
 	--icons-colors: #aed6dc;
+	--person-icon: #2b303e;
+	--active-skill-green: #1e847f;
+
+	/* backgrounds colors */
+	--home-background: #4a536b;
 	--active-red-background-linear: linear-gradient(
 		180deg,
 		rgba(255, 154, 141, 0) 0%,
 		rgba(255, 154, 141, 0.38) 89.06%,
 		rgba(255, 154, 141, 0.51) 100%
 	);
-	--person-icon: #2b303e;
 	--black-background: #252525;
 	--second-black-background: #292929;
-	--active-skill-green: #1e847f;
 }
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Rubik', sans-serif;
+	/* font-family: 'PT Mono', monospace; */
+}
+
+a {
+	text-decoration: none;
+}
+
+ul li {
+	list-style: none;
 }
