--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 /* Import fonts */
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=PT+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap');
 
 /* Set variables */
 :root {
@@ -35,8 +36,9 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Rubik', sans-serif;
+	/* font-family: 'Rubik', sans-serif; */
 	/* font-family: 'PT Mono', monospace; */
+	font-family: 'Work Sans', sans-serif !important;
 }
 
 html {
@@ -47,6 +49,6 @@ a {
 	text-decoration: none;
 }
 
-ul li {
+nav ul li {
 	list-style: none;
 }
