--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,14 @@ div.activeBox {
 		padding: 0 2rem 4rem;
 	}
 }
+
+@media (min-width: 1550px) {
+	.App {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		max-width: 1550px;
+		margin: 0px auto;
+	}
+}
